# real_wrld_ML_Crypto

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  Makefile  kubeconfig  mise.toml  pyproject.toml  zshrc
.devcontainer/: devcontainer.json  postCreateCommand.sh
Services/candles/: pyproject.toml
Services/candles/src/candles/: config.py  main.py  settings.env
Services/technical_indicators/: pyproject.toml  settings.env
Services/technical_indicators/src/technical_indicators/: candle.py  config.py  config.yaml  indicator.py  main.py  query.sql  table.py
Services/trader/: pyproject.toml  settings.env
Services/trader/src/trader/: __init__.py  config.py  kraken_api.py  main.py
Services/trades/: pyproject.toml  settings.env
Services/trades/src/trades/: config.py  kraken_rest_api.py  kraken_websocket_api.py  main.py  trade.py
dashboards/: candles.json
deployments/dev/backfill_technical_indicators/: backfill_technical_indicators.yaml
deployments/dev/candles/: .envrc  candles.yaml
deployments/dev/kind/: create_cluster.sh  install_grafana.sh  install_kafka_ui.sh  install_risingwave.sh
deployments/dev/kind/manifests/: grafana-values.yaml  kafka_ui_all_in_one.yaml
deployments/dev/technical_indicators/: technical_indicators.yaml
deployments/dev/trades/: trades.yaml
deployments/digital_ocean/: .envrc
deployments/prod/candles/: .envrc  candles.yaml
deployments/prod/manifests/: kafka-e11b.yaml  kafka_ui_all_in_one.yaml
deployments/prod/technical_indicators/: technical_indicators.yaml
deployments/prod/trades/: .envrc  trades.yaml
docker/: candles.dockerfile  technical-indicators.dockerfile  technical_indicators_two_stages.dockerfile  trades.dockerfile
lessons/: 02_manual_k8s_workloads.md  session_10.md  session_11.md  session_6.md  session_7.md  session_8.md  session_9.md
scripts/: build_and_push_images.sh  deploy.sh
trades/: pyproject.toml
