[project]
name = "crypto-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "candles",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.1",
    "pyyaml>=6.0.2",
    "quixstreams>=3.13.1",
    "requests>=2.32.3",
    "ruff>=0.11.8",
    "technical-indicators",
    "trades",
    "websocket-client>=1.8.0",
]

[project.optional-dependencies]
talib = [
    "ta-lib>=0.6.3",
]

[tool.uv.workspace]
members = [
    "Services/trades",
    "Services/candles",
    "Services/technical_indicators",

]

[tool.uv.sources]
candles = { workspace = true }
technical-indicators = { workspace = true }
trades = { workspace = true }

[tool.ruff]
line-length = 88
lint.select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
lint.ignore = [
    "C901",  # max-complexity-10
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
